2010-09-23  Frank Lanitz  <frank@frank.uvena.de>

 * Replace deprecated PLUGIN_KEY_GROUP macro.


2010-04-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Allow hitting return to close email address dialog and proceed.


2010-01-05

 * Release of 0.4.3 mainteinance release.


2009-10-08  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Use waf for building plugin in faovr of autotools.


2009-07-18  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Update to Geany plugin API v147 and make usage of single header includes.


2009-05-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make usage of Geany's ui_widget_set_tooltip_text() function.


2009-04-24  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Applied a patch by Timothy Boronczyk which allows aborting when inserting
   recipient's email address.


2008-10-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Applied a patch by Nick to make use of Geany Plugin API r100 and the
   add_document_sensitive() function from plugin API.


2008-10-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Applied a patch by Nick to make use of Geany Plugin API r99 and the
   add item to toolbar function.


2008-10-03  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Implement a %b placeholder for adding basename of file to mailer command.
   Thanks to Timothy Boronczyk for idea.


2008-09-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make configuration example copyable.


2008-09-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a patch by Timothy Boronczyk to support creating a mail with
   recipients email. Thanks for it.


2008-09-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Build environment: Update of Makefiles to include icon.h into source
   package
 * Build environment: Added makefile for Windows (needs to be tested)
 * configure.in: Update of version string


2008-07-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
